zero-trust-workloads/unsigned-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: unsigned-pod
spec:
  containers:
    - name: sample-container
      image: nginx:latest
      securityContext:
        capabilities:
          add: ["CAP_NET_BIND_SERVICE"]
      imagePullPolicy: Always
